--- a/Contactusthrough.html
+++ b/Contactusthrough.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="Contactusthrough.php">
 	<title></title>
 </head>
 <body>
