--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
 <body>
 <div class="social-menu">
   <h1>Our Contacts</h1>
- <center><a href="Contactusthrough.html"><h2>Contact Us Through E-Mail.</h2></center></a>
+ <center><a href="https://harsh-chaudhary.000webhostapp.com/"><h2>Contact Us Through E-Mail.</h2></center></a>
  <center>↓</center>
   <ul>
     <li><a href="https://www.facebook.com/profile.php?id=100035177611173"><i class="fa fa-facebook"></i></a></li>
