--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,7 +10,7 @@
       <div class="card-text">
 
         <h2>Harsh Ch.</h2>
-        <p>My Name Is Harsh Chaudhary. I grew up in a village named Mudiliya. This Is My First WEBSITE.</p>
+        <p>My Name Is Harsh Chaudhary. WELCOME HERE :)</p>
       </div>
       <div class="card-stats">
         <div class="stat">
