--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="menu">
 			
 			<div class="leftmenu">
-				<h4> SPACE LOVER ❤  </h4>
+				<h4> SPACE LOVER ❤️  </h4>
 			</div>
 
 			<div class="rightmenu">
