--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<li> Gallery </li>
 					<li><a href="AboutUs.html"> About Us</a></li>
 					<li><a href="SpaceFact.html"> Space Facts </a></li>
-					<li><a href="OurContacts.html">Contact</a></li>
+					<li><a href="index.php">Contact</a></li>
 				</ul>
 			</div>
 
